@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel">
+  <configlet
+      remove="True"
+      action_id="collective.z3cform.norobots.settings"
+      appId="collective.z3cform.norobots"
+      category="Products"/>
+</object>
