@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<registry>
+  <records remove="True" interface="collective.z3cform.norobots.browser.interfaces.INorobotsWidgetSettings" />
+</registry>
