@@ -4,7 +4,8 @@ Changelog
 1.4.5 (unreleased)
 ~~~~~~~~~~~~~~~~~~
 
-- Nothing changed yet.
+- Add uninstall profile.
+  [thet]
 
 
 1.4.4 (2016-07-20)
